@startuml
enum TiredAnimStates {
    Woke= 0,
    Slep= 1,
}
class AnimController {
    + {static} <<readonly>> State : int
    Start() : void
    + getTired() : void
    + awaken() : void
}
MonoBehaviour <|-- AnimController
AnimController --> "_animator" Animator
AnimController --> "animState" TiredAnimStates
@enduml
